For infoScoop EE patch 2.0.0.3 release.